--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -17,6 +17,19 @@ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
 address = {USA}
 }
 
+@inbook{ebnf,
+author = {McCracken, Daniel D. and Reilly, Edwin D.},
+title = {Backus-Naur Form (BNF)},
+year = {2003},
+isbn = {0470864125},
+publisher = {John Wiley and Sons Ltd.},
+address = {GBR},
+abstract = {Backus-Naur Form, named after John W. Backus of the US and Peter Naur of Denmark, and usually written BNF, is the best-known example of a meta-language (q.v.), i.e. one that syntactically describes a programming language. Using BNF it is possible to specify which sequences of symbols constitute a syntactically valid program in a given language. (The question of semantics--i.e, what such valid strings of symbols mean--must be specified separately.) A discussion of the basic concepts of BNF follows.},
+booktitle = {Encyclopedia of Computer Science},
+pages = {129–131},
+numpages = {3}
+}
+
 
 @book{puntambekar:compiler_design,
   title={COMPILER DESIGN},
