added semantic model

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -196,6 +196,14 @@ title = {C++ Templates are Turing Complete}
   year = 2012
 }
 
+@article{cpp:function_overload_frontend,
+  title={Research on the Design of Function Overload Resolution by C++ Compiler Front End [J]},
+  author={Kang, He and Chao, Chen and Jian, Liu},
+  journal={Electronic Science and Technology},
+  volume={2},
+  year={2009}
+}
+
 @techreport{ISO:cpp20,
 type = {Standard},
 key = {ISO/IEC 14882:2020(E) },
