--- a/Papers/WUT-Master-Thesis/tex/1-wstep.tex
+++ b/Papers/WUT-Master-Thesis/tex/1-wstep.tex
@@ -14,7 +14,7 @@ Meta-program można zdefiniować jako aplikację, która spełnia jedno z nastę
 \item Program uzyskuje dostęp lub modyfikuje własną strukturę.
 \end{enumerate}
 
-Zaproponowane w tej pracy mechanizmy, opisane dokładniej w rozdziale \ref{Attributes_definition}, umożliwiają stworzenie aplikacji jawnie złożonej z dwóch części:
+Zaproponowane w rozdziale mechanizmy, opisane dokładniej w rozdziale \ref{Attributes_definition}, umożliwiają stworzenie aplikacji jawnie złożonej z dwóch części:
 konwencjonalnego programu, który zostanie skompilowany do formy wykonywalnej oraz meta-programu, który zostanie wykonany w czasie kompilacji.
 Celem meta-kodu jest wykonanie analizy oraz modyfikacji konwencjonalnej części aplikacji.
 Aby to osiągnąć, zaprojektowany został nowy, uproszczony język programowania zawierający proponowane mechanizmy.
