--- a/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
+++ b/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
@@ -245,7 +245,7 @@ Ten aspekt języka, daje programiście szereg nowych możliwości.
 Jednym z najprostszych przykładów użycia możliwości generowania kodu, jest zadeklarowanie typu enumeracyjnego jako zbiór flag.
 Aby to osiągnąć, wszystkie wartości enumeratora muszą być kolejnymi potęgami liczby 2, tak aby binarna alternatywa dowolnych dwóch opcji była unikatowo identyfikowalna.%todo: wording
 
-W większości języków programowania, nie ma możliwości automatycznego przypisywania wartości enumeratora w ten sposób.
+W większości języków programowania nie ma możliwości automatycznego przypisywania wartości enumeratora w ten sposób.
 W C++ nie istnieje też żaden analizator który wykrywałby błędną definicję takiej flagi.
 Przydzielenie wartości oraz weryfikacja czy są one poprawne, jest opdowiedzialnością programisty.
 
@@ -260,7 +260,7 @@ Programista nadal musi samodzielnie je ustalić.
 \subsection{Rozszerzalność języka}
 \label{Language_extensibility}
 Jedną z konsekwencji zaproponowanych mechanizmów języka C-=-1 jest możliwość rozszerzania języka bez modyfikacji kompilatora.
-Oznacza to że pewne elementy składni, obecne w innych językach, stają się zbędnę w C-=-1.
+Oznacza to, że pewne elementy składni, obecne w innych językach, stają się zbędne w C-=-1.
 \subsubsection{Symbole zewnętrzne}
 Większość języków programowania zawiera mechanizm umożliwiający import symboli zewnętrznych.
 Mogą one pochodzić z kodu napisanego w innym języku lub z już skompilowanej biblioteki.
