--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -4,7 +4,7 @@
 Język C-=-1 w przeciwieństwie do większości współczesnych języków programowania jest oparty na udostępnieniu programiście struktur danych tworzonych przez kompilator. Deskryptory typów, funkcji, przestrzeni nazw oraz enumeratorów, razem z reprezentacją pośrednią kodu są udokumentowaną częścią języka (załącznik nr 1).
 Aby umożliwić użytkownikowi wykorzystanie tych struktur danych, C-=-1 musi zapewnić sposób na napisanie kodu wykonywanego w czasie kompilacji, który może nimi manipulować. W tym celu postanowiono rozszerzyć koncepcję atrybutu, aby umożliwić inspekcję i modyfikację reprezentacji pośredniej.
 C-=-1 został zaprojektowany na bazie założeń C++. Obydwa te języki są statycznie typowane, kompilowane oraz nie wymagają specjalnego środowiska uruchomieniowego.
-Przy projektowaniu C-=-1 skorzystano jednak z doświadczeń wyciągniętych z C++ w aspektach takich jak dziedziczenie wielobazowe czy zarządzanie pamięcią. Obydwa te aspekty zostały opisane odpowiednio w rozdziałach \ref{elementy_jezyka} oraz \ref{struktura_paczki}
+Przy projektowaniu C-=-1 skorzystano jednak z doświadczeń wyciągniętych z C++ w aspektach takich jak dziedziczenie wielobazowe czy zarządzanie pamięcią. Obydwa zostały opisane odpowiednio w rozdziałach \ref{elementy_jezyka} oraz \ref{struktura_paczki}
 
 \subsection{Składnia}
 
@@ -54,7 +54,6 @@ Ponieważ programista nie musi jawnie precyzować, że procedura jest wykonywaln
 Taka możliwość tworzy także pewne wyzwania, dokładniej opisane w rozdziale \ref{compile_time_constant_evaluation}.
 
 \subsubsection{Atrybuty}
-% todo: stretch importance
 \label{Attributes_definition}
 
 Atrybuty stanowią najważniejszy aspekt C-=-1.
@@ -94,7 +93,11 @@ Ciało atrybutu używa wręcz tej samej reguły co ciało klasy.
 Istotnym elementem gramatyki atrybutu, jest natomiast wspomniany wcześniej cel atrybutu (reguła \lstinline{attributeTarget}), deklarujący, do których elementów języka można przyłączyć dany atrybut.
 
 W obecnym stanie języka istnieją trzy cele: funkcje, zmienne i typy, zgodnie z linią piątą listingu \ref{lst:attribute_grammar}.
-Atrybut może być powiązany z wieloma celami, w zależności od których 
+Atrybut może być powiązany z wieloma celami.
+W zależności od obsługiwanych celów atrybut ma do zaimplementowania różny zestaw metod, reagujący na użycie danego elementu modelu semantycznego (rozdział \ref{design:semantic_model}).
+Przykładowo dla funkcji, te metody to między innymi \lstinline{onCall}, powiązana z wywołaniem procedury.
+Wszystkie atrybuty mają również metodę \lstinline{attach}, wywoływaną po stworzeniu nagłówka elementu modelu.
+Te funkcje zostały opisane w rozdziale \ref{Attributes_mechanism_cm1}.
 
 \begin{minipage}{\linewidth}
   
@@ -123,9 +126,46 @@ Atrybut może być powiązany z wieloma celami, w zależności od których
 \label{design:attributes:special_functions}
 
 \subsection{Reprezentacja pośrednia}\label{reprezentacja_posrednia}
-Programista C-=-1 może analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji. C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
-Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 1. Wszystkie typy instrukcji oraz wyrażeń mają ze sobą powiązany konkretny typ. Wyjątkiem jest \lstinline{ScopeTerminationStatement} który nie jest powiązany z żadną instrukcją pisaną przez użytkownika.
+Programista C-=-1 może analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji.
+C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
+Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 1.
+Wszystkie typy instrukcji oraz wyrażeń mają ze sobą powiązany konkretny typ.
+Wyjątkiem jest \lstinline{ScopeTerminationStatement} który nie jest powiązany z żadną instrukcją pisaną przez użytkownika.
 Instrukcja zakończenia zakresu jest wstawiana przez kompilator na koniec każdej instrukcji złożonej i jest odpowiedzialna za wywołanie destruktorów zmiennych lokalnych (opisane w rozdziale \ref{classes_definition}).
+
+\begin{minipage}{\linewidth}
+	\begin{lstlisting}[
+		numbers=left,
+		firstnumber=0,
+		caption={Kod w C++ zawierający przeciążoną funkcję},
+		aboveskip=0pt,
+		label={lst:cpp_overloaded_function}
+	]
+int add(int a, int b);
+float add(float a, float b);
+int main() {
+  add(1, 2);
+  add(1.0, 2.0);
+}
+	\end{lstlisting}
+\end{minipage}
+
+CIR jest najbardziej zbliżona do drzewa AST programu.
+Jednak, zamiast bazować na składni programu, ta struktura danych opiera się na jego semantyce.
+Rozważmy fragment kodu C++ w listingu \ref{lst:cpp_overloaded_function}.
+Zawiera on dwa przeciążenia funkcji \lstinline{add}: jedno przyjmujące dwa parametry \lstinline{int} a drugie przyjmujące \lstinline{float}.
+Z punktu widzenia drzewa AST, wywołania w liniach 3 i 4, różnią się wyłącznie przekazywanymi stałymi.
+Identyfikator funkcji (w tym wypadku \lstinline{add}) nie wskazuje jej w sposób unikatowy \cite{ISO:cpp20}, kompilator musi dokonać wyboru przeciążenia na podstawie przekazywanych parametrów \cite{cpp:function_overload_frontend}.
+
+CIR, zamiast opierać się na tekście źródłowym, składa się z odniesień do konkretnych elementów programu.
+Tak więc w kontekście przykładu z listingu \ref{lst:cpp_overloaded_function}, obiekty w modelu odpowiadające liniom 3 i 4 zawierałyby jednakowe wskazania na funkcje.
+CIR, w przeciwieństwie do drzewa AST składa się więc wyłącznie z informacji o znaczeniu semantycznym, nie składniowym.
+
+Przegląd literatury nie zawierał struktury danych o charakterystyce zbliżonej do CIR.
+Zaproponowano więc nowy termin: reprezentacja semantyczna.
+Opisuje on strukturę danych, opisującą program, składającą się wyłącznie z informacji o znaczeniu semantycznym.
+Reprezentacja semantyczna zawiera komplet informacji potrzebnych do zrozumienia programu.
+Operacje takie jak wybieranie przeciążenia, po jego skonstruowaniu, są zbędne.
 
 \subsection{Zarządzanie pamięcią}
 Zarządzanie pamięcią w C-=-1 jest oparte na C++11. W 2011 do biblioteki standardowej zostały wprowadzone nowe typy 'inteligentnych wskaźników': \lstinline{unique_ptr}, \lstinline{shared_ptr} oraz \lstinline{weak_ptr}\cite{ISO:2012:III}.
