--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -1,10 +1,16 @@
 \section{Wyzwania}
 
-W związku z nietypowym podejściem do problemu, zarówno projekt jak i implementacja C-=-1 przedstawiła szereg ciekawych wyzwań.
+W związku z nietypowym podejściem do problemu, zarówno projekt, jak i implementacja C-=-1 przedstawiła szereg ciekawych wyzwań.
 W szczególności są one powiązane z możliwością wykonywania różnego kodu w zależności od kontekstu uruchomienia oraz publiczną naturą reprezentacji pośredniej.
 
 \subsection{Instancje generyków jako element modelu semantycznego}
-Jednym z wyzwań powiązanych z publicznością reprezentacji pośredniej, lokalizacja instancji generyków w modelu semantycznym.
+Jednym z wyzwań powiązanych z publicznością reprezentacji pośredniej, jest lokalizacja instancji generyków w modelu semantycznym.
+Ponieważ generyk 
+
+\begin{figure}
+	\caption{Diagram przykładowej relacji pomiędzy pakietami zawierającymi typ generyczny}
+	\includegraphics[width=\textwidth]{img/generic_misplaced.png}
+\end{figure}
 
 %todo: finish
 Gdzie wsadzić instancję generyka?
